--- a/css/theme.css
+++ b/css/theme.css
@@ -1,25 +1,3 @@
-*{
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0)!important;
-    touch-action: none;
-}
-
-input,
-textarea,
-button,
-select,
-a{
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0)!important;
-    touch-action: none;
-}
-
-
-a:focus,
-a:visited,
-a:active {
-    border: none;
-    outline: none;
-}
-
 .text-theme {
     color: #ad84de !important;
 }
@@ -27,11 +5,10 @@ a:active {
 .close:hover {
     color: red !important;
 }
-button.close:active {
-    border: none;
-    outline: none;
-}
-.close::-moz-focus-inner {
-    border: none;
-}
 
+
+.form-control:focus {
+    border-color: rgb(0,0,0) !important;
+    outline: none;
+    box-shadow: none  !important;
+}
